# SC20-GB-CS1-ThetaGPU-AI-driven-MD

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  deepdrivemd.yml  md_file_layout  setup.cfg  setup.py
deepdrivemd/: __init__.py
deepdrivemd/analytics/: __init__.py  analytics.py
deepdrivemd/driver/: config.py  cs1_manager.py  experiment_main.py  mpi_launcher.py  test.yml
deepdrivemd/models/: base_model.py
deepdrivemd/outlier/: lof.py  utils.py
deepdrivemd/sim/: .run_openmm.py.swp  openmm_reporter.py  openmm_sim.py  openmm_simulation.py  run_openmm.py  utils.py
deepdrivemd/util/: __init__.py  copy_sender.py  filelock.py
examples/: 10001316.cobaltlog  10001316.error  bba-gpu-test.yaml  bba_28_case1.yaml  bba_28_case2.yaml  bba_448_case1.yaml  bba_448_case2.yaml  deepdrivemd_template.yaml  nsp1016_448_case2.yaml  nsp1016_448_debug.yaml  submit.sh  test-full.yaml  test-md-only.yaml  test.sh  theta_run.py
production-inputs/: bba_28_case1-long.yaml  bba_28_case1.yaml  bba_28_case2.yaml  nsp1016_448_case1.yaml  nsp1016_448_case2.yaml  nsp1016_448_pasc1.yaml  nsp1016_448_pasc2.yaml  submit.sh
production-inputs/pasc2021/: bba_28_cs1_pasc1.continue1.yaml  bba_28_cs1_pasc1.yaml  bba_28_gpu_pasc1.yaml  nsp1016_448_pasc1.yaml  nsp1016_448_pasc2.yaml  nsp1016_448_pasc3_cs1.yaml
sim/MD_exps/: run_openmm.py
sim/driver/: config.py  cs1_manager.py  experiment_main.py  mpi_launcher.py  test.yml  test_cs1.py  theta_run.py
test/: bba-gpu-test.yaml  bba_28_cs1_pasc1.continuetest.yaml  nsp1016_448_gpuTraining.yaml  nsp1016_448_test.yaml  submit.sh
(+24 files in other folders)
