[metadata]
name = deepdrivemd
version = attr: deepdrivemd.__version__
description = DeepDriveMD
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = 

author =
author_email =
license = 
keywords = 

[options]
packages= find:
install_requires = 
    pyyaml
    pydantic
    MDAnalysis
    h5py
    parmed
python_requires = >=3.6

[options.packages.find]
exclude =
    data
    tests
    docs
    env
    
